# de-week7-OluwadotunIlesanmi-Gspread-Automation-AI-summarization

./: .env  .gitignore  README.md  analysis.py  analysis_report.json  etl.py  main.py  pyproject.toml  utils.py
tests/: test_analysis.py  test_etl.py  test_utils.py
